--- a/indus/index.html
+++ b/indus/index.html
@@ -42,42 +42,11 @@
                         <div class="row">
                             <div class="logo">
                                 <img src="images/logo.png" alt="logo">
-                                <p>Lorem Ipsum is simply dummy text</p>
+                                <p>Find your match among the stars</p>
                             </div>
                         </div>
                         <div class="row">
-                            <!-- DAYS -->
-                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
-                                <div class="dash days_dash">
-                                    <div class="digit">0</div>
-                                    <div class="digit">0</div>
-                                    <span class="dash_title">Days</span>
-                                </div>
-                            </div>
-                            <!-- HOURS -->
-                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
-                                <div class="dash hours_dash">
-                                    <div class="digit">0</div>
-                                    <div class="digit">0</div>
-                                    <span class="dash_title">Hours</span>
-                                </div>
-                            </div>
-                            <!-- MINUTES -->
-                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
-                                <div class="dash minutes_dash">
-                                    <div class="digit">0</div>
-                                    <div class="digit">0</div>
-                                    <span class="dash_title">Minutes</span>
-                                </div>
-                            </div>
-                            <!-- SECONDS -->
-                            <div class="col-md-3 col-sm-3 col-xs-6 dash-glob" data-scroll-reveal="enter bottom move 25px, after 0.3s">
-                                <div class="dash seconds_dash">
-                                    <div class="digit">0</div>
-                                    <div class="digit">0</div>
-                                    <span class="dash_title">Seconds</span>
-                                </div>
-                            </div>
+ 
                         </div> <!-- END ROW -->
                     </div> <!-- END COUNTDOWN -->
                 </div> <!-- LARGE HEADER -->
@@ -93,17 +62,9 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="main_content">
-                            <h4><strong>Indus is under construction!</strong></h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-                            <div id="" class="confirm-message"></div>
-                            <form id="" name="">
-                                <div class="input-group">
-                                    <input class="form-control news-input" type="text" name="subscribe_email" id="subscribe_email" placeholder="Email" />
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-custom news-btn" id="" name="subscribe_btn"><span>Subscribe</span></button>
-                                    </span>
-                                </div><!-- /input-group -->
-                            </form><!-- END FORM -->
+                            <h4><strong>Pleiades, your one stop rocket ship to find that someone special</strong></h4>
+                            <p>Meet the person of your dreams thanks to our advanced machine learning algorithm.</p>
+                            
                         </div>  
                     </div>
                 </div>
@@ -150,9 +111,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h4>Get In Touch</h4>
+                        <h4>Fill out the Questionair</h4>
                         <div class="line-separate line-white text-center"><span></span></div>
-                        <p>7-Indus House, Area name,city name -1230009</p>
+                        <p>Select the most relevent choice from the dropdown boxes.</p>
                     </div> <!-- end Our Location -->
                 </div> <!-- end row -->
                 <!-- CONTACT FORM -->
@@ -162,13 +123,19 @@
                         <div class="col-lg-4 col-md-4 col-lg-offset-2 col-md-offset-2">
                             <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
                         </div> <!-- end Name -->
-                        <div class="col-lg-4 col-md-4">
-                            <input class="" type="text" name="contact_email" id="contact_email" placeholder="Email" />
-                        </div> <!-- end Email -->
+ 
                     </div>
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
-                            <textarea name="contact_message" id="contact_message" placeholder="Message"></textarea>
+                            <table>
+                                <tr><th><label for="pulldown">Options:</label></th>
+                                    <td>
+                                        <select id="pulldown" name="Sex">
+                                            <option value="male">Male</option>
+                                            <option value="female">Female</option>
+                                        </select>
+                                    </td>
+                                </tr> 
                         </div>
                     </div> <!-- end Message -->
                     <div class="row">
@@ -188,17 +155,6 @@
 
         <footer class="footer">
             <div class="container text-center">
-                <div class="row">
-                    <div class="col-md-12">
-                        <ul class="social list-inline">
-                            <li class="social-btn" id="fb"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-btn" id="tw"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-btn" id="tbl"><a href="#"><i class="fa fa-tumblr"></i></a></li>
-                            <li class="social-btn" id="pin"><a href="#"><i class="fa  fa-pinterest"></i></a></li>
-                            <li class="social-btn" id="flk"><a href="#"><i class="fa  fa-flickr"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
                 <div class="row">
                     <p class="copyright">Copyright© 2016 <a href="http://templatestock.co">Template Stock</p>
                 </div>
