--- a/indus/index.html
+++ b/indus/index.html
@@ -120,28 +120,84 @@
                 <div id="cformSuccessMsg" style="display: none;" class="confirm-message"></div>
                 <form id="" name="contactForm" method="POST" >
                     <div class="row">
-                        <div class="col-lg-4 col-md-4 col-lg-offset-2 col-md-offset-2">
+                        <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
                             <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
                         </div> <!-- end Name -->
  
                     </div>
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
-                            <table>
-                                <tr><th><label for="pulldown">Options:</label></th>
-                                    <td>
-                                        <select id="pulldown" name="Sex">
-                                            <option value="male">Male</option>
-                                            <option value="female">Female</option>
-                                        </select>
-                                    </td>
-                                </tr> 
+                            <label for="pulldown">Sex:</label>
+                                <select id="pulldown" name="Sex">
+                                    <option value="male">Male</option>
+                                    <option value="female">Female</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Education:</label>
+                                <select id="pulldown2" name="Education">
+                                    <option value="lt high school">Less than high school</option>
+                                    <option value="high school">High School</option>
+                                    <option value="junior college">Community College</option>
+                                    <option value="bachelor">Bachelor's Degree</option>
+                                    <option value="graduate">Graduate's Degree</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Zodiac Symbol:</label>
+                                <select id="pulldown3" name="Zodiac">
+                                    <option value="aries">Aries</option>
+                                    <option value="taurus">Taurus</option>
+                                    <option value="gemini">Gemini</option>
+                                    <option value="cancer">Cancer</option>
+                                    <option value="leo">Leo</option>
+                                    <option value="virgo">Virgo</option>
+                                    <option value="libra">Libra</option>
+                                    <option value="scorpio">Scorpio</option>
+                                    <option value="sagittarius">Sagittarius</option>
+                                    <option value="capricorn">Capricorn</option>
+                                    <option value="aquarius">Aquarius</option>
+                                    <option value="pisces">Pisces</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Sexual Orientation:</label>
+                                <select id="pulldown4" name="Sexual Orientation">
+                                    <option value="exclusively female">Prefer women</option>
+                                    <option value="exclusively male">Prefer men</option>
+                                    <option value="both male and female">Prefer both</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">I am sociable:</label>
+                                <select id="pulldown5" name="Sociable">
+                                    <option value="strongly agree">Strongly Agree</option>
+                                    <option value="agree">Agree</option>
+                                    <option value="neither agree nor disagree">Neutral</option>
+                                    <option value="disagree">Disagree</option>
+                                    <option value="strongly disagree">Strongly Disagree</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">How many people named Mark do you know:</label>
+                                <select id="pulldown6" name="Mark">
+                                    <option value="0">0</option>
+                                    <option value="1">1</option>
+                                    <option value="2-5">2-5</option>
+                                    <option value="6-10">6-10</option>
+                                </select>
                         </div>
                     </div> <!-- end Message -->
                     <div class="row">
-                        <div class="col-md-8 col-md-offset-2">
-                            <div class="text-right">
-                                <button class="btn btn-custom" id="contact_submit_btn" name="contact_submit_btn"><span>Send Message</span></button>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <br>
+                            <div class="text-center">
+                                <button class="btn btn-custom" id="contact_submit_btn" name="contact_submit_btn"><span>Align</span></button>
                             </div>
                         </div>
                     </div> <!-- end button -->
