--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
                 </div> <!-- end row -->
                 <!-- CONTACT FORM -->
                 <div id="cformSuccessMsg" style="display: none;" class="confirm-message"></div>
-                <form id="" name="contactForm" method="POST" >
+
+
+                <form id="" name="questionairForm" method="POST" >
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
                             <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
                         </div> <!-- end Name -->
- 
                     </div>
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
@@ -135,31 +136,68 @@
                         </div>
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Day Of Birth:</label>
+                                <select id="pulldown1" name="DayOfBirth">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                    <option value="13">13</option>
+                                    <option value="14">14</option>
+                                    <option value="15">15</option>
+                                    <option value="16">16</option>
+                                    <option value="17">17</option>
+                                    <option value="18">18</option>
+                                    <option value="19">19</option>
+                                    <option value="20">20</option>
+                                    <option value="21">21</option>
+                                    <option value="22">22</option>
+                                    <option value="23">23</option>
+                                    <option value="24">24</option>
+                                    <option value="25">25</option>
+                                    <option value="26">26</option>
+                                    <option value="27">27</option>
+                                    <option value="28">28</option>
+                                    <option value="29">29</option>
+                                    <option value="30">30</option>
+                                    <option value="31">31</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Month Of Birth:</label>
+                                <select id="pulldown2" name="MonthOfBirth">
+                                    <option value="1">Jan</option>
+                                    <option value="2">Feb</option>
+                                    <option value="3">Mar</option>
+                                    <option value="4">Apr</option>
+                                    <option value="5">May</option>
+                                    <option value="6">Jun</option>
+                                    <option value="7">Jul</option>
+                                    <option value="8">Aug</option>
+                                    <option value="9">Sep</option>
+                                    <option value="10">Oct</option>
+                                    <option value="11">Nov</option>
+                                    <option value="12">Dec</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Education:</label>
-                                <select id="pulldown2" name="Education">
+                                <select id="pulldown3" name="Education">
                                     <option value="lt high school">Less than high school</option>
                                     <option value="high school">High School</option>
                                     <option value="junior college">Community College</option>
                                     <option value="bachelor">Bachelor's Degree</option>
                                     <option value="graduate">Graduate's Degree</option>
-                                </select>
-                        </div>
-                        <br><br>
-                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
-                            <label for="pulldown">Zodiac Symbol:</label>
-                                <select id="pulldown3" name="Zodiac">
-                                    <option value="aries">Aries</option>
-                                    <option value="taurus">Taurus</option>
-                                    <option value="gemini">Gemini</option>
-                                    <option value="cancer">Cancer</option>
-                                    <option value="leo">Leo</option>
-                                    <option value="virgo">Virgo</option>
-                                    <option value="libra">Libra</option>
-                                    <option value="scorpio">Scorpio</option>
-                                    <option value="sagittarius">Sagittarius</option>
-                                    <option value="capricorn">Capricorn</option>
-                                    <option value="aquarius">Aquarius</option>
-                                    <option value="pisces">Pisces</option>
                                 </select>
                         </div>
                         <br><br>
@@ -173,8 +211,18 @@
                         </div>
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
-                            <label for="pulldown">I am sociable:</label>
-                                <select id="pulldown5" name="Sociable">
+                            <label for="pulldown">How many people named Mark do you know:</label>
+                                <select id="pulldown5" name="Mark">
+                                    <option value="0">0</option>
+                                    <option value="1">1</option>
+                                    <option value="2-5">2-5</option>
+                                    <option value="6-10">6-10</option>
+                                </select>
+                        </div>
+                        <br><br>
+                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
+                            <label for="pulldown">Do you agree with this statement: "I am sociable" :</label>
+                                <select id="pulldown6" name="Sociable">
                                     <option value="strongly agree">Strongly Agree</option>
                                     <option value="agree">Agree</option>
                                     <option value="neither agree nor disagree">Neutral</option>
@@ -182,23 +230,11 @@
                                     <option value="strongly disagree">Strongly Disagree</option>
                                 </select>
                         </div>
-                        <br><br>
-                        <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
-                            <label for="pulldown">How many people named Mark do you know:</label>
-                                <select id="pulldown6" name="Mark">
-                                    <option value="0">0</option>
-                                    <option value="1">1</option>
-                                    <option value="2-5">2-5</option>
-                                    <option value="6-10">6-10</option>
-                                </select>
-                        </div>
                     </div> <!-- end Message -->
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <br>
-                            <div class="text-center">
-                                <button class="btn btn-custom" id="contact_submit_btn" name="contact_submit_btn"><span>Align</span></button>
-                            </div>
+                            <input type="submit" value="Align"/>
                         </div>
                     </div> <!-- end button -->
                 </form><!-- END FORM -->
