--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h4>Fill out the Questionair</h4>
+                        <h4>Fill out the Questionncaire</h4>
                         <div class="line-separate line-white text-center"><span></span></div>
                         <p>Select the most relevent choice from the dropdown boxes.</p>
                     </div> <!-- end Our Location -->
@@ -120,7 +120,7 @@
                 <div id="cformSuccessMsg" style="display: none;" class="confirm-message"></div>
 
 
-                <form id="" name="questionairForm" method="POST" >
+                <form id="" name="questionnaireForm" method="POST" >
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
                             <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
